# ai-message-router

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/agent/: email_agent.py  email_agent_protocol.py
app/api/v1/: ai_agent.py  dependencies.py  messages.py
app/core/: config.py  logging.py
app/domain/: constants.py
app/exceptions/: exceptions.py
app/models/: messages.py
app/services/: email_router_service.py  email_service.py  smtp_email_service.py
tests/: routing_cases.py
tests/integration/: conftest.py
tests/integration/agent/: test_send_user_email_tool.py
tests/integration/api/v1/: test_messages_post.py
tests/integration/services/: test_smtp_email_service.py
tests/smoke/: conftest.py  test_agent_routing.py  test_api.py
